# take-root

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_EN.md  REVIEW_NOTES.md  pyproject.toml
personas/: amy.md  jack.md  jeff.md  lucy.md  neo.md  peter.md  robin.md  ruby.md
src/take_root/: __main__.py  artifacts.py  cli.py  config.py  doctor.py  errors.py  frontmatter.py  guardrails.py  perf.py  persona.py  phase_ui.py  reset.py  state.py  summary.py  ui.py  vcs.py
src/take_root/phases/: __init__.py  code.py  configure.py  init.py  plan.py  test.py
src/take_root/runtimes/: __init__.py  base.py  claude.NOTES.md  claude.py  codex.NOTES.md  codex.py  fake.py
tests/: test_cli.py  test_code.py  test_config.py  test_configure.py  test_doctor.py  test_frontmatter.py  test_guardrails.py  test_harness_perf.py  test_integration.py  test_persona.py  test_phase_ui.py  test_phases_helpers.py  test_plan.py  test_runtimes.py  test_state.py  test_summary.py  test_test.py  test_ui.py  test_vcs.py
tests/fixtures/: config.yaml
tests/fixtures/artifacts/: amy.md  jeff.md  lucy_fix.md  lucy_implement.md  neo_review_round.md  peter_review_round.md  robin_finalize.md  robin_review_round.md
