[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "take-root"
version = "0.1.0"
description = "CLI harness for multi-persona implementation workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-benchmark>=4.0",
  "mypy",
  "ruff",
]

[project.scripts]
take-root = "take_root.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: integration tests requiring PYTEST_INTEGRATION=1",
  "perf: harness performance benchmarks (slow-ish; use --benchmark-only or pytest -m perf)",
]

[tool.pytest-benchmark]
min_rounds = 3

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["RUF001", "N818"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src/take_root"]
